material-addon/src/main/webapp/VAADIN/themes/material/components/v-button.scss
body:not(.v-touch) :not(.v-upload) > * > .v-button:not(.v-disabled):not(.borderless):not(.borderless-colored):not(.link):not(.quiet):not(.border):not(.primary):not(.friendly):not(.danger):not(.custom):not(.floating-action):hover {
    background: valo-font-color($v-background-color, 0.05);
}
body:not(.v-touch) :not(.v-upload) > :not(.v-component-group) > .v-button:not(.v-disabled):not(.borderless):not(.flat):not(.borderless-colored):not(.floating-action):hover,
body.v-touch :not(.v-component-group) > .v-button:not(.v-disabled):not(.borderless):not(.flat):not(.borderless-colored):not(.floating-action):active {
    box-shadow: $z-depth-1-5;
}

body:not(.v-touch) .friendly.v-button:not(.v-disabled):not(.borderless):not(.borderless-colored):hover {
    background: valo-font-color($v-friendly-color, 0.1);
}

body:not(.v-touch) .custom.v-button:not(.v-disabled):not(.borderless):not(.borderless-colored):hover {
    background: valo-font-color($mat-custom-color, 0.1);
}

body:not(.v-touch) .danger.v-button:not(.v-disabled):not(.borderless):not(.borderless-colored):hover {
    background: valo-font-color($v-error-indicator-color, 0.1);
}

body:not(.v-touch) .primary.v-button:not(.v-disabled):not(.borderless):not(.borderless-colored):hover {
    background: valo-font-color($v-selection-color, 0.1);
}

body:not(.v-touch) :not(.v-upload) > * > .v-button.borderless:not(.v-disabled):not(.borderless-colored):not(.primary):not(.friendly):not(.danger):not(.custom):hover {
    background: rgba(valo-font-color($mat-background-color, 1), 0.1);
}

body:not(.v-touch) .v-button.floating-action:hover {
    background: valo-font-color($v-selection-color, 0.1);
}

body:not(.v-touch) .v-button.floating-action:not(.flat):hover,
body.v-touch .v-button.floating-action:not(.flat):active {
    box-shadow: $z-depth-4 !important;
}

body:not(.v-touch) .v-button.floating-action:not(.flat).friendly:hover {
    background: valo-font-color($v-friendly-color, 0.1);
}

body:not(.v-touch) .v-button.floating-action:not(.flat).danger:hover {
    background: valo-font-color($v-error-indicator-color, 0.1);
}

body:not(.v-touch) .v-button.border:hover {
    color: valo-font-color(valo-font-color($mat-background-color, 1), 1);
    background: valo-font-color($mat-background-color, 1) !important;
}

body:not(.v-touch) .v-button.border.custom:hover {
    color: valo-font-color($mat-custom-color, 1);
    background: $mat-custom-color !important;
}

body:not(.v-touch) .v-button.border.primary:hover {
    color: valo-font-color($v-focus-color, 1);
    background: $v-focus-color !important;
}

body:not(.v-touch) .v-button.border.friendly:hover {
    color: valo-font-color($v-friendly-color, 1);
    background: $v-friendly-color !important;
}

body:not(.v-touch) .v-button.border.danger:hover {
    color: valo-font-color($v-error-indicator-color, 1);
    background: $v-error-indicator-color !important;
}

body:not(.v-touch) .v-button.borderless.primary:hover,
body:not(.v-touch) .v-button.borderless-colored:hover {
    background: rgba($v-focus-color, 0.2) !important;
}

body:not(.v-touch) .v-button.borderless.friendly:hover {
    background: rgba($v-friendly-color, 0.2) !important;
}

body:not(.v-touch) .v-button.borderless.danger:hover {
    background: rgba($v-error-indicator-color, 0.2) !important;
}

body:not(.v-touch) .v-button.borderless.custom:hover {
    background: rgba($mat-custom-color, 0.2) !important;
}

@mixin v-button {
    :not(.v-upload) > * > .v-button {
        @extend .z-depth-0;
        text-transform: uppercase;
        transition: box-shadow .3s ease-out, background .3s;
        padding: 0 20px;
        border-radius: $v-border-radius;
        outline: none;
        text-align: center;
    }
    :not(.v-upload) > * > .v-button {
        height: $v-unit-size;
    }
    :not(.v-upload) > * > .v-button.tiny {
        height: $v-unit-size--tiny;
    }
    :not(.v-upload) > * > .v-button.small {
        height: $v-unit-size--small;
    }
    :not(.v-upload) > * > .v-button.large {
        height: $v-unit-size--large;
    }
    :not(.v-upload) > * > .v-button:before {
        content: "";
        display: inline-block;
        width: 0;
        height: 110%;
        vertical-align: middle;
    }
    :not(.v-upload) > * > .v-button:not(.borderless):not(.borderless-colored):not(.link):not(.quiet):not(.border):not(.primary):not(.friendly):not(.danger):not(.custom):not(.floating-action) {
        background: $mat-card-color;
    }
    :not(.v-upload) > * > .v-button:not(.borderless):not(.border).primary {
        background: $v-focus-color;
        color: valo-font-color($v-focus-color, 1.0);
    }
    :not(.v-upload) > * > .v-button:not(.borderless):not(.border).friendly {
        background: $v-friendly-color;
        color: valo-font-color($v-friendly-color, 1.0);
    }
    :not(.v-upload) > * > .v-button:not(.borderless):not(.border).danger {
        background: $v-error-indicator-color;
        color: valo-font-color($v-error-indicator-color, 1.0);
    }
    :not(.v-upload) > * > .v-button:not(.borderless):not(.border).custom {
        background: $mat-custom-color;
        color: valo-font-color($mat-custom-color, 1.0);
    }
    :not(.v-upload) > * > .v-button:not(.flat):not(.borderless):not(.border):not(.borderless-colored):not(.quiet):not(.link) {
        @extend .z-depth-1;
    }
    .v-button:not(.borderless).flat {
        @extend .z-depth-0;
    }
    .v-button.borderless-colored,
    .v-button.link {
        color: $v-focus-color;
    }
    .v-button.round {
        border-radius: 30px;
    }
    .v-button.border {
        @extend .z-depth-0;
        border: 1px solid valo-font-color($mat-background-color);
        background: transparent;
        color: valo-font-color($mat-background-color);
    }
    .v-button.border.primary {
        border: 1px solid $v-focus-color;
        color: $v-focus-color;
    }
    .v-button.border:after {
        border: 0px solid $v-focus-color;
    }
    .v-button.border.friendly {
        border: 1px solid $v-friendly-color;
        color: $v-friendly-color;
    }
    .v-button.border.danger {
        border: 1px solid $v-error-indicator-color;
        color: $v-error-indicator-color;
    }
    .v-button.border.custom {
        border: 1px solid $mat-custom-color;
        color: $mat-custom-color;
    }
    .v-button.borderless {
        color: valo-font-color($mat-background-color);
    }
    .v-button.borderless.primary {
        color: $v-focus-color;
    }
    .v-button.borderless.friendly {
        color: $v-friendly-color;
    }
    .v-button.borderless.danger {
        color: $v-error-indicator-color;
    }
    .v-button.borderless.custom {
        color: $mat-custom-color;
    }
    .v-button.floating-action {
        width: 56px;
        height: 56px;
        padding: 0px;
        border-radius: 100%;
        background: $v-selection-color;
        color: valo-font-color($v-focus-color, 1.0);
    }
    .v-button.floating-action:not(.flat) {
        @extend .z-depth-3;
    }
    .v-button.floating-action.flat {
        @extend .z-depth-0;
    }
    .v-button.floating-action .v-icon {
        line-height: 56px;
        width: 56px;
        text-align: center;
    }
    .v-button.floating-action.friendly {
        background: $v-friendly-color;
        color: valo-font-color( $v-friendly-color, 1.0);
    }
    .v-button.floating-action.danger {
        background: $v-error-indicator-color;
        color: valo-font-color( $v-error-indicator-color, 1.0);
    }
    .v-button.floating-action.custom {
        color: valo-font-color( $mat-custom-color, 1.0);
        background: $mat-custom-color;
    }
    .v-button.v-disabled {
        background: valo-font-color($v-background-color, 0.2);
        color: valo-font-color(valo-font-color($v-background-color, 0.2), 0.7);
        opacity: 0.7;
    }
    .v-button-quiet {
        visibility: visible;
        background: transparent;
    }
    .v-button-primary {
        font-weight: 500;
    }
    .v-button-primary.floating-action {
        min-width: 56px;
    }
    .v-button-icon-align-top {
        height: auto;
    }
    .v-button-icon-align-top .v-icon {
        display: block;
        margin-left: auto;
        margin-right: auto;
        text-align: center;
    }
    .v-button-icon-align-right .v-icon {
        float: right;
        padding-left: 8px;
    }
    .v-button-icon-align-right [class*="wrap"] {
        display: inline-block;
        padding-left: 5px;
    }
}

